--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "csv-parse": "^4.16.2",
+    "date-fns": "^2.23.0",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
