--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "socker-schedules",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "next dev",
-    "build": "next build",
-    "start:production": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "csv-parse": "^4.16.2",
-    "date-fns": "^2.23.0",
-    "lodash": "^4.17.21",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.172",
-    "@types/react": "17.0.19",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.2"
-  }
+	"name": "socker-schedules",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"start": "next dev",
+		"build": "next build",
+		"start:production": "next start",
+		"lint": "next lint",
+		"download": "node lib/getSchedules.mjs"
+	},
+	"dependencies": {
+		"csv-parse": "^4.16.2",
+		"date-fns": "^2.23.0",
+		"lodash": "^4.17.21",
+		"next": "11.1.2",
+		"node-fetch": "^3.2.10",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.172",
+		"@types/react": "17.0.19",
+		"eslint": "7.32.0",
+		"eslint-config-next": "11.1.2",
+		"typescript": "4.4.2"
+	}
 }
