--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
 		"download": "node lib/getSchedules.mjs"
 	},
 	"dependencies": {
-		"csv-parse": "^4.16.2",
-		"date-fns": "^2.23.0",
+		"csv-parse": "^5.5.0",
+		"date-fns": "^2.30.0",
 		"lodash": "^4.17.21",
-		"next": "11.1.2",
-		"node-fetch": "^3.2.10",
-		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"next": "13.4.19",
+		"node-fetch": "^3.3.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.172",
-		"@types/react": "17.0.19",
-		"eslint": "7.32.0",
-		"eslint-config-next": "11.1.2",
-		"typescript": "4.4.2"
+		"@types/lodash": "^4.14.198",
+		"@types/node": "20.6.0",
+		"@types/react": "18.2.21",
+		"eslint": "8.49.0",
+		"eslint-config-next": "13.4.19",
+		"typescript": "5.2.2"
 	}
 }
