--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,5 +6,9 @@
 			"type": "image/png",
 			"sizes": "512x512"
 		}
-	]
+	],
+	"display": "standalone",
+	"start_url": "/",
+	"theme_color": "black",
+	"description": "Shows socker schedules for my friends"
 }
