--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 		"start": "next dev",
 		"build": "next build",
 		"start:production": "next start",
-		"lint": "next lint",
-		"download": "node lib/getSchedules.mjs"
+		"lint": "next lint"
 	},
 	"dependencies": {
+		"@vercel/kv": "^0.2.2",
 		"csv-parse": "^5.5.0",
 		"date-fns": "^2.30.0",
 		"lodash": "^4.17.21",
