--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@vercel/kv": "^0.2.2",
 		"csv-parse": "^5.5.0",
 		"date-fns": "^2.30.0",
+		"idb-keyval": "^6.2.1",
 		"lodash": "^4.17.21",
 		"next": "13.4.19",
 		"node-fetch": "^3.3.2",
