Add Owls and Green Machine

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@vercel/functions": "^1.4.1",
 		"@vercel/kv": "^0.2.2",
 		"csv-parse": "^5.5.0",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.0",
 		"idb-keyval": "^6.2.1",
+		"jsdom": "^25.0.0",
 		"lodash": "^4.17.21",
 		"next": "13.4.19",
 		"node-fetch": "^3.3.2",
@@ -21,11 +23,13 @@
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
+		"@types/jsdom": "^21.1.7",
 		"@types/lodash": "^4.14.198",
 		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
 		"typescript": "5.2.2"
-	}
+	},
+	"type": "module"
 }
